# action-data

./: .gitignore  CHANGELOG.md  COMPAT_LT.md  README.md  REPORT.md  pyproject.toml
.github/workflows/: ci.yml
adp/: __init__.py  _util.py  cli.py  project.py  store.py  validate.py  wrap.py
docs/decisions/: raw-only-package.md
schemas/: README.md  clips.schema.json  enrichment.schema.json  manifest.schema.json  provenance.schema.json  session.schema.json  storage-map.schema.json  timeline.schema.json
tests/: conftest.py  test_clips_schema.py  test_raw_only_refusal.py  test_roundtrip.py  test_schemas.py  test_store_resolver.py  test_timeline_contract.py
tests/fixtures/mini-ride/: manifest.json
tests/fixtures/mini-ride/derived/: timeline.csv  validation.json
tests/fixtures/mini-ride/fit/: bosch.fit  garmin.fit
