[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adp"
version = "0.1.0"
description = "Action-data package (ADP): canonical schema + reference tooling for portable action-sports telemetry+video packages"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Action Videos" }]
keywords = ["telemetry", "gps", "action-sports", "adp", "json-schema"]

dependencies = [
    "jsonschema>=4.21",
]

[project.optional-dependencies]
# Reading producer output (rfr ride folders) for `adp wrap`. Kept optional so
# the schema/validate surface stays lean.
producer = [
    "pyarrow>=15",
    "pandas>=2.2",
]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]
# Minimal deps to run the test suite (pytest + the schema validator). jsonschema
# is already a core dependency; it is listed here so `pip install -e .[test]`
# is self-describing for CI.
test = [
    "pytest>=8",
    "jsonschema>=4.21",
]

[project.scripts]
adp = "adp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.hatch.build.targets.wheel]
packages = ["adp"]

# The canonical schemas ship inside the package so tooling can resolve them
# without a source checkout.
[tool.hatch.build.targets.wheel.force-include]
"schemas" = "adp/schemas"

[tool.ruff]
line-length = 100
target-version = "py311"
